@@ -153,6 +153,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|WritableUtils
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -178,6 +192,26 @@ operator|.
 name|io
 operator|.
 name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
 import|;
 end_import
 
@@ -241,7 +275,7 @@ init|=
 operator|(
 name|byte
 operator|)
-literal|1
+literal|2
 decl_stmt|;
 specifier|private
 name|byte
@@ -273,6 +307,16 @@ name|batch
 init|=
 operator|-
 literal|1
+decl_stmt|;
+specifier|private
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+name|attributes
 decl_stmt|;
 comment|/*    * -1 means no caching    */
 specifier|private
@@ -1268,6 +1312,160 @@ return|return
 name|cacheBlocks
 return|;
 block|}
+comment|/**    * Sets arbitrary scan's attribute.    * In case value = null attribute is removed from the attributes map.    * @param name attribute name    * @param value attribute value    */
+specifier|public
+name|void
+name|setAttribute
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|byte
+index|[]
+name|value
+parameter_list|)
+block|{
+if|if
+condition|(
+name|attributes
+operator|==
+literal|null
+operator|&&
+name|value
+operator|==
+literal|null
+condition|)
+block|{
+return|return;
+block|}
+if|if
+condition|(
+name|attributes
+operator|==
+literal|null
+condition|)
+block|{
+name|attributes
+operator|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|value
+operator|==
+literal|null
+condition|)
+block|{
+name|attributes
+operator|.
+name|remove
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|attributes
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|this
+operator|.
+name|attributes
+operator|=
+literal|null
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|attributes
+operator|.
+name|put
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Gets scan's attribute    * @param name attribute name    * @return attribute value if attribute is set,<tt>null</tt> otherwise    */
+specifier|public
+name|byte
+index|[]
+name|getAttribute
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+if|if
+condition|(
+name|attributes
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+return|return
+name|attributes
+operator|.
+name|get
+argument_list|(
+name|name
+argument_list|)
+return|;
+block|}
+comment|/**    * Gets all scan's attributes    * @return unmodifiable map of all attributes    */
+specifier|public
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+name|getAttributesMap
+parameter_list|()
+block|{
+if|if
+condition|(
+name|attributes
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+return|;
+block|}
+return|return
+name|Collections
+operator|.
+name|unmodifiableMap
+argument_list|(
+name|attributes
+argument_list|)
+return|;
+block|}
 comment|/**    * @return String    */
 annotation|@
 name|Override
@@ -2002,6 +2200,92 @@ name|set
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|version
+operator|>
+literal|1
+condition|)
+block|{
+name|int
+name|numAttributes
+init|=
+name|in
+operator|.
+name|readInt
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|numAttributes
+operator|>
+literal|0
+condition|)
+block|{
+name|this
+operator|.
+name|attributes
+operator|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numAttributes
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|name
+init|=
+name|WritableUtils
+operator|.
+name|readString
+argument_list|(
+name|in
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|value
+init|=
+name|Bytes
+operator|.
+name|readByteArray
+argument_list|(
+name|in
+argument_list|)
+decl_stmt|;
+name|this
+operator|.
+name|attributes
+operator|.
+name|put
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 specifier|public
 name|void
@@ -2241,6 +2525,84 @@ operator|.
 name|writeInt
 argument_list|(
 literal|0
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|this
+operator|.
+name|attributes
+operator|==
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|writeInt
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|out
+operator|.
+name|writeInt
+argument_list|(
+name|this
+operator|.
+name|attributes
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+name|attr
+range|:
+name|this
+operator|.
+name|attributes
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|WritableUtils
+operator|.
+name|writeString
+argument_list|(
+name|out
+argument_list|,
+name|attr
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Bytes
+operator|.
+name|writeByteArray
+argument_list|(
+name|out
+argument_list|,
+name|attr
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
