@@ -228,6 +228,7 @@ Release 0.91.0 - Unreleased
    HBASE-3880  Make mapper function in ImportTSV plug-able (Bill Graham)
    HBASE-2938  HBASE-2938 Add Thread-Local Behavior To HTable Pool
                (Karthick Sankarachary)
+   HBASE-3811  Allow adding attributes to Scan (Alex Baranau)
 
   TASKS
    HBASE-3559  Move report of split to master OFF the heartbeat channel
